<package>
  <name>pr2_common</name>
  <version>1.13.0</version>
  <description>URDF description of the robot kinematics and dynamics, 3D models of robot components, information required for gazebo to simulate the PR2, and messages specific to the PR2 such as detailed information about its power board and fingertip pressure sensors.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_common</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>

  <author>John Hsu</author>
  <author>Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_msgs</run_depend>
  <run_depend>pr2_dashboard_aggregator</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>pr2_machine</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
