<package>
  <name>pr2_dashboard_aggregator</name>
  <version>1.13.0</version>
  <description>A simple script that aggregates all of the topics that a "pr2_dashboard" app might be interested in.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_dashboard_aggregator</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>

  <author>Rob Wheeler</author>
  <author>Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>

</package>
