<package>
  <name>pr2_machine</name>
  <version>1.13.0</version>
  <description>This package contains the xxx.machine files that describe the different hosts a node can be spawned on. Currently there is one machine file for the pr2 robot, and one for the simulated pr2 robot.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_machine</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>

  <author>Wim Meeussen</author>
  <author>Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
