<package>
  <name>pr2_msgs</name>
  <version>1.13.0</version>
  <description>Messages for representing PR2 state, such as battery information and the PR2 fingertip sensors.</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_msgs</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>

  <author>Eric Berger and many others</author>
  <author>Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
